<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".FormSubmissionActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/form_toolbar"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gaads"
            android:layout_gravity="center_horizontal"
            />

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/project_submission"
                android:textColor="@color/yellow"
                android:textSize="@dimen/size_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Project Submission" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="173dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="80dp"
                android:background="@drawable/editext_background"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="@dimen/dimen_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="@dimen/dimen_16"
                android:background="@drawable/editext_background"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="@dimen/dimen_16"
                android:background="@drawable/editext_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="@dimen/dimen_16"
                android:background="@drawable/editext_background"
                android:hint="@string/project_link_hint"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_80"
                android:layout_marginBottom="@dimen/dimen_16"
                android:text="@string/submit"
                android:background="@drawable/submit_button_background"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:textSize="@dimen/size_16"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>